# huc

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Doxyfile  Makefile  README.md  algebraic.hh  callgrind.out.31171  concept_poly.hh  concepts.hh  elliptic.hh  fields.hh  finfield.hh  huc  main.cc  mainpage.md  myprogram  poly.hh  rings.hh
DivPoly/: main.cc  myprogram  poly.cc  poly.hh
FinField/: finfield.hh
doxygen/html/: algebraic_8hh_source.html  annotated.html  classIntRing-members.html  classIntRing.html  classIntRing_1_1element-members.html  classIntRing_1_1element.html  classMatrix-members.html  classMatrix.html  classconcept__testing_1_1Polynomial-members.html  classconcept__testing_1_1Polynomial.html  classes.html  classschoof_1_1Elliptic-members.html  classschoof_1_1Elliptic.html  classschoof_1_1Elliptic_1_1Element-members.html  classschoof_1_1Elliptic_1_1Element.html  classschoof_1_1IntRing-members.html  classschoof_1_1IntRing.html  classschoof_1_1IntRing_1_1Element-members.html  classschoof_1_1IntRing_1_1Element.html  classschoof_1_1Polynomial-members.html  classschoof_1_1Polynomial.html  classschoof_1_1Rationals-members.html  classschoof_1_1Rationals.html  classschoof_1_1Rationals_1_1Element-members.html  classschoof_1_1Rationals_1_1Element.html  classschoof_1_1Zmod.html  concept__poly_8hh_source.html  elliptic_8hh_source.html  fields_8hh_source.html  files.html  functions.html  (+10 more)
legacy/: algebraic.hh  matrix.hh  rings.hh
src/: CMakeLists.txt  main.cc  rational_field.cc
structures/: alg_struct.hh
tests/: CMakeLists.txt  PolynomialUnitTest.cc  test1.cc
(+73 files in other folders)
